--- a/GUI-SDL2.cabal
+++ b/GUI-SDL2.cabal
@@ -64,6 +64,7 @@ library
     , filepath
     , directory
     , monadplus
+    , mtl
     , sdl2
     , sdl2-ttf
     , sdl2-image
@@ -168,6 +169,7 @@ executable GUIDemo
       , text
       , transformers
       , vector
+      , mtl
       , sdl2
       , sdl2-ttf
       , sdl2-image
